--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,6 +5,6 @@
     <title>Hello World</title>
 </head>
 <body>
-Hello World from Robert Smith! This is my first HTML page.
+Hello World from Robert Smith! This is my first HTML page
 </body>
 </html>
