--- a/templates/about.html
+++ b/templates/about.html
@@ -10,8 +10,42 @@
         <h2>A Student at the Smith School of Business</h2>
         <h2>She is 21 years old</h2>
         <h2>She is a senior about to graduate in May</h2>
-<p>Oreoluwa is a Nigerian name that means the <em>'gift of God'</em> is derived from the native langauge <em>Yoruba</em>. Yoruba is a native language of a specific part of the West African country, Nigeria. Oreoluwa speaks both Yoruba and English, although recently she complains about how <strong>terrible</strong> her Yoruba sounds. </p>
+        <p>Oreoluwa is a Nigerian name that means the <em>'gift of God'</em> is derived from the native langauge <em>Yoruba</em>. Yoruba is a native language of a specific part of the West African country, Nigeria. Oreoluwa speaks both Yoruba and English, although recently she complains about how <strong>terrible</strong> her Yoruba sounds. </p>
         <p>Oreoluwa is graduating college May 2024 in Finance and Information Systems. She plans to work in a field that helps her to combine both her interest while ensuring to brush up on all relevenat technical skills. She believes she enjoys consulting and hopes the field allows her room for growth, to learn new skills and to prune the skills she currently has. </p>
+<p>This semester she is taking:</p>
+<ul>
+    <li>BMGT407</li>
+    <li>BMGT441</li>
+    <li>BMGT380</li>
+    <li>BMGT445</li>
+    <li>BMGT446</li>
+</ul>
+<p>My favorite type of fruits (because i am trying to eat healithier):</p>
+<ol>
+    <li>Grapes</li>
+    <li>Apples</li>
+    <li>Bananas</li>
+    <li>Stawberries</li>
+    <li>Oranges</li>
+</ol>
 
+<table>
+    <tr>
+        <th>Course</th>
+        <th>Semester</th>
+    </tr>
+    <tr>
+        <td>BMGT407</td>
+         <td>Spring 2024</td>
+    </tr>
+    <tr>
+        <td>BMGT403</td>
+         <td>Fall 2023</td>
+    </tr>
+    <tr>
+        <td>BMGT402</td>
+         <td>Spring 2023</td>
+    </tr>
+</table>
 </body>
 </html>
