--- a/templates/about.html
+++ b/templates/about.html
@@ -5,13 +5,13 @@
     <title>Ore Toluwani</title>
 </head>
 <body>
-<h1
         <h1>About Ore Toluwani</h1>
         <h2>A Student at the Smith School of Business</h2>
         <h2>She is 21 years old</h2>
         <h2>She is a senior about to graduate in May</h2>
         <p>Oreoluwa is a Nigerian name that means the <em>'gift of God'</em> is derived from the native langauge <em>Yoruba</em>. Yoruba is a native language of a specific part of the West African country, Nigeria. Oreoluwa speaks both Yoruba and English, although recently she complains about how <strong>terrible</strong> her Yoruba sounds. </p>
         <p>Oreoluwa is graduating college May 2024 in Finance and Information Systems. She plans to work in a field that helps her to combine both her interest while ensuring to brush up on all relevenat technical skills. She believes she enjoys consulting and hopes the field allows her room for growth, to learn new skills and to prune the skills she currently has. </p>
+    <!-- All paragraphs are completed with different formatting styles as requested. -->
 <p>This semester she is taking:</p>
 <ul>
     <li>BMGT407</li>
@@ -28,7 +28,7 @@
     <li>Stawberries</li>
     <li>Oranges</li>
 </ol>
-
+    <!-- Both order and unordered lists -->
 <table>
     <tr>
         <th>Course</th>
@@ -47,5 +47,15 @@
          <td>Spring 2023</td>
     </tr>
 </table>
+ <!-- Table with 3 rows are completed-->
+
+body>
+<p>A link to my hello world page<a href="/hello">from last class</a>.</p>
+body>
+<p>A link to one of my favorite pages <a href="https://www.zillow.com/?utm_medium=cpc&utm_source=google&utm_content=1471764169|65545421228|kwd-570802407|603457706088|&semQue=null&gad_source=1&gclid=Cj0KCQiA5rGuBhCnARIsAN11vgTWrSix8IgK2h0GO7JiXPPOIvNcP2zmEMc3oYt9mHtkuDjn0rUr-iMaAmq4EALw_wcB">becuase i enjoy lookinng at houses in my free time! </a>.</p>
+<p>A link to one of my favorite pages <a href="https://www.rhsmith.umd.edu/commencement" target="_blank">which is the spring 2024 commencement page </a>.</p>
+ <!-- Below is the picture of the Smith logo -->
+<img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png"
+     width="27"  height="72" alt="Smith Logo">
 </body>
 </html>
