Committing correct route for css page with all changes made

--- a/templates/about-css.html
+++ b/templates/about-css.html
@@ -53,7 +53,7 @@
         <p>A link to my hello world page<a href="/hello">from last class</a>.</p>
 
 <p>A link to one of my favorite pages <a> href="https://www.zillow.com/?utm_medium=cpc&utm_source=google&utm_content=1471764169|65545421228|kwd-570802407|603457706088|&semQue=null&gad_source=1&gclid=Cj0KCQiA5rGuBhCnARIsAN11vgTWrSix8IgK2h0GO7JiXPPOIvNcP2zmEMc3oYt9mHtkuDjn0rUr-iMaAmq4EALw_wcB"> becuase i enjoy lookinng at houses in my free time! </a>.</p>
-<p class="important-link">"A link to one of my favorite pages <a href="https://www.rhsmith.umd.edu/commencement" target="_blank">which is the spring 2024 commencement page </a>.</p>
+<p class="important-link">"A link to one of my favorite page <a href="https://www.rhsmith.umd.edu/commencement" target="_blank">which is the spring 2024 commencement page </a>.</p>
  <!-- Below is the picture of the Smith logo -->
 <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png"  alt="Smith Logo" class="logo">
 </body>
