--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <form class="row g-3" action="/contact" method="post">
+{% extends "base.html" %}
+
+{% block page_title %}
+    Contact Us
+{% endblock %}
+
+{% block page_head %}
+    Contact Us
+{% endblock %}
+
+{% block page_content %}
+    {% if form_submitted %}
+    <div class="col-12">
+        <h2>Thank you for completing my form!</h2>
+    </div>
+    <div class="col-md-6">
+        <p>First Name:</p>
+    </div>
+    <div class="col-md-6">
+        <p>{{ request.form.get("first_name") }}</p>
+    </div>
+    <div class="col-md-6">
+        <p>Last Name:</p>
+    </div>
+    <div class="col-md-6">
+        <p>{{ request.form.get("last_name") }}</p>
+    </div>
+    <div class="col-md-6">
+        <p>Email:</p>
+    </div>
+    <div class="col-md-6">
+        <p>{{ request.form.get("email") }}</p>
+    </div>
+    <div class="col-md-6">
+        <p>Major:</p>
+    </div>
+    <div class="col-md-6">
+        <p>{{ request.form.get("major") }}</p>
+    </div>
+    <div class="col-md-6">
+        <p>Agree to Be Contacted:</p>
+    </div>
+    <div class="col-md-6">
+        <p>{{ 'Yes' if request.form.get("agree_check") else 'No' }}</p>
+    </div>
+    <p><a href="{{ url_for('contact') }}">Complete form again</a></p>
+    {% else %}
+    <form class="row g-3" action="{{ url_for('contact') }}" method="post">
         <div class="col-md-6">
             <label for="first_name" class="form-label">First Name</label>
             <input type="text" class="form-control" id="first_name" name="first_name">
@@ -15,13 +54,13 @@
             <label for="last_name" class="form-label">Last Name</label>
             <input type="text" class="form-control" id="last_name" name="last_name">
         </div>
+        <div class="col-md-6">
+            <label for="major" class="form-label">Major</label>
+            <input type="text" class="form-control" id="major" name="major">
+        </div>
         <div class="col-12">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" name="email">
-        </div>
-        <div class="col-12">
-            <label for="major" class="form-label">Major</label>
-            <input type="text" class="form-control" id="major" name="major">
         </div>
         <div class="col-12">
             <div class="form-check">
@@ -35,6 +74,6 @@
             <button type="submit" class="btn btn-primary">Submit Form</button>
         </div>
     </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-</body>
-</html>
+     {% endif %}
+
+{% endblock %}
