--- a/templates/favorite-course.html
+++ b/templates/favorite-course.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+% extends "base.html" %}
+
+{% block page_title %}
+    Contact Us
+{% endblock %}
+
+{% block page_head %}
+    Contact Us
+{% endblock %}
+
+{% block page_content %}
 <p>You entered your favorite course as {{ request.args.get('subject') }} {{request.args.get('course_number') }}</p>
 </body>
-</html>
+{% endblock %}
