updated favorite course html to include tit;le.To make the page more professional.

--- a/templates/favorite-course.html
+++ b/templates/favorite-course.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Favorite Course</title>
-</head>
-<body>
-    {% extends "base.html" %}
-    {% block page_title %}
-        Favorite Course
-    {% endblock %}
+{% extends "base.html" %}
 
-    {% block page_content %}
-        <p>You entered your favorite course as {{ request.args.get('subject') }} {{ request.args.get('course_number') }}</p>
-    {% endblock %}
-</body>
-</html>
+{% block page_title %}
+    Favorite Course
+{% endblock %}
+
+{% block page_head %}
+     Favorite Course
+{% endblock %}
+
+{% block page_content %}
+<p>You entered your favorite course as {{ request.args.get('subject') }} {{request.args.get('course_number') }}</p>
+{% endblock %}
