included bootstrap design into base file and allowed for a green nav bar

--- a/templates/favorite-course.html
+++ b/templates/favorite-course.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
 {% extends "base.html" %}
 
 {% block page_title %}
     Favorite Course
 {% endblock %}
 
-{% block page_head %}
-     Favorite Course
-{% endblock %}
+{% block content %}
 
-{% block page_content %}
+<h1>Favorite Courses</h1>
+
 <p>You entered your favorite course as {{ request.args.get('subject') }} {{request.args.get('course_number') }}</p>
 {% endblock %}
+</body>
+</html>
