--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    Contact Us
+    Contact
 {% endblock %}
 
-{% block page_head %}
-    Contact Us
-{% endblock %}
+{% block content %}
 
-{% block page_content %}
+<h1>Contact</h1>
+
     {% if form_submitted %}
     <div class="col-12">
         <h2>Thank you for completing my form!</h2>
@@ -77,3 +76,5 @@
      {% endif %}
 
 {% endblock %}
+</body>
+</html>
