--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
-{% block page_title %}
-    Contact
-{% endblock %}
+{% block page_title %}Contact{% endblock %}
 
 {% block content %}
+
+    <h1>Contact</h1>
+
 
     {% if form_submitted %}
     <div class="col-12">
@@ -71,7 +72,8 @@
             <button type="submit" class="btn btn-primary">Submit Form</button>
         </div>
     </form>
-     {% endif %}
+
+    {% endif %}
 
 {% endblock %}
 </body>
