--- a/templates/training.html
+++ b/templates/training.html
@@ -6,6 +6,7 @@
 </head>
 <!-- the message for the training page as instructed -->
 Welcome to your training for the TerpSys Student Information System. Training materials are currently under construction, but will be created very soon. Please check back soon or email otoluwan at <a href="mailto:otoluwan@terpmail.umd.edu" </a> if you wish to be placed on the waiting list.
+<!-- end of message -->
 <body>
 </body>
 </html>
